<resources>
    <string name="app_name">Scheduler</string>

    <string name="task_title_prompt">Enter the task\'s Title:</string>
    <string name="task_detail_prompt">Enter the task\'s details:</string>
    <string name="action_settings">Settings</string>
    <string name="default_message">Enter Text</string>
    <string name="title_schedule_activity">Schedule</string>
    <string name="action_search">Search</string>
    <string name="local_file_location_tasks">tasks</string>
    <string name="local_file_location_details">details</string>
    <string name="local_file_location_priority">priority</string>
    <string name="action_add_task">Add Task</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>